# ObjectRecognition

./: AtHomeConfig.h  AtHomeObjectRecognitionScharr.cpp  AtHomeVisualStrategy.h  CMakeLists.txt  CapturaVideo.cpp  DataBase_Reader.h  Firefly_Optimization.h  SegmentacaoFirefly.cpp  entropy.h  firefly.h  histogram.h  incl.h  multilimiarizacao.h  psrSegmentation.h  tsallis.h
